--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,8 +16,9 @@
   </tr></thead>
   <tbody>
     <tr>
-      <td>item</td>
-      <td><%= @post.item %></td>
+      <td>product</td>
+      <td><%= @post.product %></td>
+
 
     </tr>
     <tr>
