--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -95,7 +95,7 @@
   <label>Set to Private</label>
 </div>
 
-  <%= f.submit "SEND", class: "ui basic blue button" %>
+  <%= f.submit "SEND", class: "ui big basic blue button" %>
 
 
 <% end %>
