--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -41,7 +41,8 @@
 
 <% if logged_in? && current_user.stylist? %>
 
-<div class="ui green basic button">
+<div class="ui big green basic button">
+  <i class="bar chart icon"></i>
   <%= link_to "To Stylist Analysis Page", stylistanalysis_path %>
 </div>
 
