--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -74,11 +74,11 @@
 
 <!-- コメント数 & 一覧 （ポストした人のみ見れる）-->
 <% if current_user?(@post.user) %>
-  <span>
+  <div class="ui large blue label">
     <i class="idea icon"></i>
-    <%= @post.scomments.count %>stylings getting now
-  </span>
-<div class="ui divider"></div>
+    <%= @post.scomments.count %>
+    <a class="detail">stylings getting now</a>
+  </div>
 
 <!-- もらったコメント一覧 -->
   <%= render @post.scomments %>
