I18nの”post_form”日本語に設定できるようになった。

--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -1,5 +1,6 @@
 
-<h1>Ask Styling!</h1>
+<h3><%= t '_post_form.Ask Styling!' %></h3>
+
 
 <%= form_for(@post, html: { multipart: true }) do |f| %>
 
