I18n( 日時がちゃんと日本語で表示されるようにした。)

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -15,7 +15,7 @@ posts/_postページ＞＞
 
         <!-- 日時 -->
         <div class="date">
-          <%= time_ago_in_words(post.created_at) %> ago
+          <%= time_ago_in_words(post.created_at) %><%= t '_post.ago' %>
         </div>
 
       <div class="ui segment">
