--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -67,7 +67,7 @@
 
 
     <div class="date">
-      <%= time_ago_in_words(@post.created_at) %> ago
+      <%= time_ago_in_words(@post.created_at) %><%= t '_post.ago' %>
     </div>
 </div>
 
