I18n ;ファイルを別に作ることでlocalsに一つずつ書き込まなくてもいいようにした。
( stats, footer, post_form, homeページ)

--- a/app/views/shared/_footer.ja.html.erb
+++ b/app/views/shared/_footer.ja.html.erb
@@ -6,14 +6,14 @@
 
 
       <div class="eight wide column">
-        <h4 class="ui header">How to use</h4>
+        <h4 class="ui header">スタイラッテについて</h4>
         <div class="ui link list">
-          <%= link_to "Help", help_path %><br>
-          <%= link_to "Become a stylist?", styliststart_path %><br>
-          <%= link_to "Stylist Analize", stylistanalysis_path %><br>
-          More info on SNS /
-          <i class="facebook icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">Facebook</a>
-          <i class="twitter icon"></i><br>
+          <%= link_to "ヘルプ", help_path %><br>
+          <%= link_to "スタイリストになりますか?", styliststart_path %><br>
+          <%= link_to "スタイリスト分析", stylistanalysis_path %><br>
+          ソーシャルネットワーク /
+          <i class="facebook icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">フェイスブック</a>
+          <i class="twitter icon"></i><a href="https://twitter.com/stylatte2016" target="_blank">ツィッター</a><br>
         </div>
 
         <!-- 言語選択 -->
@@ -23,11 +23,11 @@
       </div>
 
       <div class="eight wide column">
-        <h4 class="ui header">About</h4>
+        <h4 class="ui header"></h4>
         <div class="ui link list">
-          <%= link_to "About Us", about_path %><br>
+          <%= link_to "運営会社", about_path %><br>
           <%= link_to "Terms and Conditions", terms_path %><br>
-          <%= link_to "Private Policy", policy_path %><br>
+          <%= link_to "プライベートポリシー", policy_path %><br>
         </div>
         <!-- コピーライト -->
         <p>Copyright © 2016 Stylatte. All rights reserved.</p>
