--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,3 @@
-/*******************************
-
-*******************************/
-
 
 /*******************************
             body
@@ -9,10 +5,13 @@
 
 body {
     margin-top: 60px;
-    margin-right: 1px;
+    margin-right: 0px;
     margin-bottom: 1px;
-    margin-left: 1px;
-    padding: 40px;
+    margin-left: 0px;
+    padding-top: 60px;
+    padding-right: 5px;
+    padding-bottom: 1px;
+    padding-left: 10px;
     overflow-x: hidden;
     min-width: 320px;
     background: #FFFFFF;
