Design Changed(ちょっとだけいろいろ細々と)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,26 @@
+/*******************************
+scomment_form
+*******************************/
+.bb{
+  background: #9cda5e;
+  margin-top: 40px;
+  margin-right: 0px;
+  margin-bottom: 20px;
+  margin-left: 0px;
+  padding: 5px;
+}
+
+/*******************************
+post_form
+*******************************/
+.dd{
+  background: #136aec;
+  margin-top: 40px;
+  margin-right: 0px;
+  margin-bottom: 20px;
+  margin-left: 0px;
+  padding: 5px;
+}
 
 /*******************************
             body
