--- a/app/views/scomments/_scomment_form.html.erb
+++ b/app/views/scomments/_scomment_form.html.erb
@@ -1,4 +1,5 @@
-＞＞_scomment_formページスタート。
+<div class="bb">
+  ＞＞_scomment_formページスタート。
 
   <h1>Send Styling from here!</h1>
 
@@ -22,7 +23,7 @@
 
   <% end %>
 
-
+</div>
 
 
 
