--- a/app/views/static_pages/stylistanalysis.html.erb
+++ b/app/views/static_pages/stylistanalysis.html.erb
@@ -33,6 +33,7 @@
       <td>Star Sum</td>
       <td><%= @total_rating %><i class="empty star icon"></i></td>
 
+
     </tr>
     <tr>
       <td>Star Average</td>
@@ -46,7 +47,8 @@
 
 <div class="ui bulleted list">
   <div class="item">
-    <%= link_to "Find Users", users_path %>
+    Why don't you explore a bit?<%= link_to "Go Exploring, Find Users", users_path %>
+
   </div>
   <div class="item">
     <%= link_to "Upgrade stylist status & Stylist status FAQ", styliststart_path %>
