I18n; footerで英語のとき最初、日本語が選べるようになっていない問題を解決した。

--- a/app/views/shared/_footer.en.html.erb
+++ b/app/views/shared/_footer.en.html.erb
@@ -17,8 +17,8 @@
         </div>
 
         <!-- 言語選択 -->
-        <%= link_to_if params[:locale].present?, '日本語',  url_for(controller: controller.controller_name, action: controller.action_name, locale: 'ja') %> |
-        <%= link_to_if params[:locale] != 'en',  'English',  url_for(controller: controller.controller_name, action: controller.action_name, locale: 'en') %>
+        <%= link_to_if params[:locale]!= 'en', '日本語',  url_for(controller: controller.controller_name, action: controller.action_name, locale: 'ja') %> |
+        <%= link_to_if params[:locale].present?,  'English',  url_for(controller: controller.controller_name, action: controller.action_name, locale: 'en') %>
 
       </div>
 
