--- a/app/views/shared/_footer.en.html.erb
+++ b/app/views/shared/_footer.en.html.erb
@@ -12,8 +12,8 @@
           <%= link_to "Become a stylist?", styliststart_path %><br>
           <%= link_to "Stylist Analize", stylistanalysis_path %><br>
           More info on SNS /
-          <i class="facebook icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">Facebook</a>
-          <i class="twitter icon"></i><a href="https://twitter.com/stylatte2016" target="_blank">ツィッター</a><br>
+          <i class="facebook blue icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">Facebook</a>
+          <i class="twitter blue icon"></i><a href="https://twitter.com/stylatte2016" target="_blank">Twitter</a><br>
         </div>
 
         <!-- 言語選択 -->
