--- a/app/views/posts/_post.ja.html.erb
+++ b/app/views/posts/_post.ja.html.erb
@@ -31,7 +31,7 @@ posts/_postページ＞＞
         <% if current_user?(post.user) %>
             <!-- このポストを詳しくみる -->
                 <i class="search icon"></i>
-                <%= link_to '詳細', post %><br>
+                <%= link_to '詳細', post %>
             <!-- このポストを削除する -->
                 <i class="trash icon"></i>
                 <%= link_to "削除", post, method: :delete, data: { confirm: "You sure?" } %>
