--- a/app/views/posts/_post.en.html.erb
+++ b/app/views/posts/_post.en.html.erb
@@ -1,32 +1,29 @@
+<!-- レンダーしてくる場合に備えて条件分岐
+ポストした本人なら、内容がみれる。
+ポストした本人以外が見に来て、非公開中（今はスタイリスト）の人のはPost一覧に出ず、みれない。とする。 -->
+
+<!-- ログインしている人がポストした本人だった場合 -->
+<% if current_user?(post.user) %>
 posts/_postページ＞＞
-
 <div class="ui feed">
-
   <div class="event">
-
     <div class="content">
-
       <!-- 名前＆アバター -->
       <a><%= link_to post.user.name, post.user %></a>
       <div class="ui avatar image">
         <%= link_to gravatar_for(post.user, size: 50), post.user %>
       </div>
-
-
         <!-- 日時 -->
         <div class="date">
           <%= time_ago_in_words(post.created_at) %><%= t '_post.ago' %>
         </div>
-
       <div class="ui segment">
-
         <!-- ポスト　コンテント -->
-        <%= post.content %><br>
+          <%= post.content %><br>
         <!-- ポストイメージ -->
         <div class="extra images">
           <a><%= image_tag post.picture.url if post.picture? %></a>
         </div>
-
         <!-- ポストしたユーザーのみ見れるリンク -->
         <% if current_user?(post.user) %>
             <!-- このポストを詳しくみる -->
@@ -36,34 +33,66 @@ posts/_postページ＞＞
                 <i class="trash icon"></i>
                 <%= link_to "Delete", post, method: :delete, data: { confirm: "You sure?" } %>
         <% end %>
-
       </div>
-
     </div>
-
   </div>
-
-
-
-<!-- コメント数表示 & もらったスタイリングコメントへのリンク-->
-
-  <div class="ui large blue label">
-    <i class="idea icon"></i>
-    <%= post.scomments.count %>
-    <a class="detail"><%= link_to 'Stylings', post %></a>
-  </div>
-<!-- スタイリングを送る -->
-<% if logged_in? && current_user.stylist? %>
-
-  <div class="ui middle green basic button">
-          <div class="summary">
-            <i class="pencil icon"></i>
-            <%= link_to 'Suppose Styling', post %>
-          </div>
-  </div>
+      <!-- コメント数表示 & もらったスタイリングコメントへのリンク-->
+      <div class="ui large blue label">
+        <i class="idea icon"></i>
+        <%= post.scomments.count %>
+        <a class="detail"><%= link_to 'Stylings', post %></a>
+      </div>
+      <!-- スタイリングを送る -->
+      <% if logged_in? && current_user.stylist? %>
+        <div class="ui middle green basic button">
+            <div class="summary">
+              <i class="pencil icon"></i>
+              <%= link_to 'Suppose Styling', post %>
+            </div>
+        </div>
+      <% end %>
+  <div class="ui divider"></div>
+</div>
 <% end %>
 
 
-  <div class="ui divider"></div>
+<!-- ログインをしていないとき elseifかunlessを使う-->
+<% unless logged_in? %>
+      <!-- postした人が(public)trueのときは -->
+      <% if post.user.public? %>
+          <div class="ui segment">
+            <%= post.content %>
+            <%= link_to post.user.name, post.user %>
+          </div>
+          <!-- ログインをしていないとき、かつ、ポストした人が(public)trueのときは、 -->
+          <!-- スタイリスト(public)trueの人のポストだけみれる。 -->
+      <% end %>
+<% end %>
 
-</div>
+
+
+<!-- ログインしているとき -->
+<!-- ログイン後、Userを探すページからみたとき、postした人が(public)trueのときは、 -->
+<% if logged_in? && post.user.public? %>
+    <!-- ポストした人が(public)trueのときは -->
+    posts/_postページ＞＞
+    <div class="ui feed">
+      <div class="event">
+        <div class="content">
+            <!-- 日時 -->
+            <div class="date">
+              <%= time_ago_in_words(post.created_at) %><%= t '_post.ago' %>
+            </div>
+          <div class="ui segment">
+            <!-- ポスト　コンテント -->
+              <%= post.content %><br>
+            <!-- ポストイメージ -->
+            <div class="extra images">
+              <a><%= image_tag post.picture.url if post.picture? %></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ui divider"></div>
+    </div>
+<% end %>
