--- a/app/views/shared/_header.en.html.erb
+++ b/app/views/shared/_header.en.html.erb
@@ -13,6 +13,7 @@
 <a href="http://192.168.99.100:3000">STYLATTE</a>
 
 
+
 <!-- PCとタブレットのみ表示 -->
 <a href="#" class="paradeiser-hidden-phone">
   <icon class="paradeiser_icon_canvas">
@@ -57,7 +58,7 @@
   <!-- アイコン -->
             <a href="#paradeiser-more" id="paradeiser-dropdown">
 
-                <span>MENU</span>
+                <i class="align justify icon"></i>MENU
             </a>
   <!-- 開いた後の中身 -->
             <ul class="paradeiser_children" id="paradeiser-more">
