--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -2,6 +2,6 @@
             html: { method: :delete },
             remote: true) do |f| %>
 
-  <%= f.submit "Unfollow", class: "ui icon button" %>
+  <%= f.submit "Unfollow", class: "ui basic button" %>
 
 <% end %>
