--- a/app/views/favorites/_destroy.html.erb
+++ b/app/views/favorites/_destroy.html.erb
@@ -1,3 +1,3 @@
 <%= link_to favorite_path(current_user.favorites.find_by(scomment_id: scomment.id)), remote: true, method: :delete, class: 'favorite-link' do %>
-  <i class="big heart icon"></i>
+  <i class="big red heart icon"></i>
 <% end %>
