--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -4,7 +4,7 @@
 
 <%= hidden_field_tag :followed_id, @user.id %>
 
-<%= f.submit "Follow", class: "ui icon button" %>
+<%= f.submit "Follow", class: "ui basic button" %><i class="user green icon"></i>
 
 
 <% end %>
