enum_help gemをつかって、国と性別のデータ結果が日本語で表記できるようになった。

--- a/app/views/shared/_user_info.en.html.erb
+++ b/app/views/shared/_user_info.en.html.erb
@@ -39,6 +39,8 @@
     </div>
     <div class="extra content">
       <!-- ユーザーの詳しい情報 -->
+            Country / <%= @user.country %><br>
+            Gender / <%= @user.gender %><br>
             Height / <%= @user.height %><br>
             Size / <%= @user.size %><br>
             Age / <%= @user.age %><br>
