--- a/app/views/shared/_user_info.ja.html.erb
+++ b/app/views/shared/_user_info.ja.html.erb
@@ -33,6 +33,8 @@
     </div>
     <div class="extra content">
       <!-- ユーザーの詳しい情報 -->
+            国 / <%= @user.country_i18n %><br>
+            性別 / <%= @user.gender_i18n %><br>
             身長 / <%= @user.height %><br>
             服のサイズ / <%= @user.size %><br>
             年齢層 / <%= @user.age %><br>
