Usersのいろいろカラムの（１）選択肢(edit)、（２）integerセレクトフォーム内容のためのenum(user.rb)、（３）結果表示(_user_info)、（４）I18n(ja.yml)を変えた。

--- a/app/views/shared/_user_info.ja.html.erb
+++ b/app/views/shared/_user_info.ja.html.erb
@@ -36,11 +36,11 @@
             国 / <%= @user.country_i18n %><br>
             性別 / <%= @user.gender_i18n %><br>
             身長 / <%= @user.height %><br>
-            服のサイズ / <%= @user.size %><br>
+            サイズ / <%= @user.size %><br>
             年齢層 / <%= @user.age %><br>
-            髪型 / <%= @user.hair_style %><br>
-            髪色 / <%= @user.hair_color %><br>
-            目の色 / <%= @user.eyes_color %>
+            髪型 / <%= @user.hair_style_i18n %><br>
+            髪色 / <%= @user.hair_color_i18n %><br>
+            目の色 / <%= @user.eyes_color_i18n %>
 
             <span class="right floated">
               <%= link_to "編集する", edit_user_path(current_user) %>
