--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-＞＞posts/newページはじまり。
+<title>New Post|Stylatte</title>
 <% provide(:title, 'New post') %>
 <section class="post_form">
   <%= render 'posts/post_form' %>
