--- a/app/views/posts/show.en.html.erb
+++ b/app/views/posts/show.en.html.erb
@@ -28,7 +28,7 @@
     </tr>
     <tr>
       <td>Size</td>
-      <td><%= @post.size %></td>
+      <td><%= @post.item_size %></td>
 
     </tr>
     <tr>
