Design Changed(ログイン画面)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,10 @@
+/*******************************
+Checkbox(Change Rails small default checkbox here )
+*******************************/
+input[type='checkbox'] {
+  width: 20px;
+  height: 20px;
+}
 
 /*******************************
 http://photoshopvip.net/91115のButton Shadowを参考に作ったボタン
